<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tool="http://schemas.android.com/tools"
              xmlns:tools="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_margin="@dimen/activity_vertical_margin"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <EditText
        style="@style/add_text_view_style"
        android:inputType="text"
        android:id="@+id/name"
        android:hint="@string/task_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        style="@style/add_text_view_style"
        android:layout_width="match_parent"
        android:id="@+id/subject_name"
        android:hint="@string/subject_name"
        android:layout_height="wrap_content"/>

    <EditText
        style="@style/add_text_view_style"
        android:layout_width="match_parent"
        android:id="@+id/class_name"
        android:hint="@string/class_name"
        android:layout_height="wrap_content"/>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/add_text_view_style"
            android:id="@+id/assigned_date_text_view"
            android:text="@string/assigned"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            style="@style/add_text_view_style"
            android:id="@+id/current_assigned_date"
            android:layout_width="wrap_content"
            android:layout_marginRight="10dp"
            android:text="date"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginRight="10dp"
            style="@style/add_text_view_style"
            android:layout_width="wrap_content"
            android:text="@string/at"
            android:layout_height="wrap_content"/>

        <TextView
            style="@style/add_text_view_style"
            android:id="@+id/current_assigned_time"
            android:text="time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/add_text_view_style"
            android:id="@+id/due_date_text_view"
            android:text="@string/due"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            style="@style/add_text_view_style"
            android:id="@+id/current_due_date"
            android:layout_width="wrap_content"
            android:layout_marginRight="10dp"
            android:text="date"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginRight="10dp"
            style="@style/add_text_view_style"
            android:layout_width="wrap_content"
            android:text="@string/at"
            android:layout_height="wrap_content"/>

        <TextView
            style="@style/add_text_view_style"
            android:id="@+id/current_due_time"
            android:text="time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>