<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
                android:layout_margin="@dimen/activity_horizontal_margin"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <EditText
        style="@style/add_text_view_style"
        android:layout_width="match_parent"
        android:hint="@string/semester_name"
        android:id="@+id/semester_name_field"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
    style="@style/add_text_view_style"
    android:layout_width="wrap_content"
    android:id="@+id/semester_start_date_field"
    android:text="@string/semester_starts"
    android:layout_below="@id/semester_name_field"
    android:layout_height="wrap_content"/>

    <Button
        style="@style/add_text_view_style"
        android:layout_width="wrap_content"
        android:id="@+id/semester_start_date_button"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/semester_start_date_field"
        android:layout_alignBottom="@+id/semester_start_date_field"
        android:layout_centerHorizontal="true"/>

    <TextView
        style="@style/add_text_view_style"
        android:layout_width="wrap_content"
        android:id="@+id/semester_end_date_field"
        android:text="@string/semester_ends"
        android:layout_below="@id/semester_start_date_field"
        android:layout_height="wrap_content"/>

    <Button
        style="@style/add_text_view_style"
        android:layout_width="wrap_content"
        android:id="@+id/semester_end_date_button"
        android:layout_height="wrap_content"
        android:layout_below="@+id/semester_start_date_button"
        android:layout_alignBaseline="@id/semester_end_date_field"
        android:layout_alignBottom="@id/semester_end_date_field"
        android:layout_alignLeft="@+id/semester_start_date_button"/>

</RelativeLayout>